2001-12-18  Don Porter  <dgp@users.sourceforge.net>

	* tests/event.test (event-click-drag-1.2): Corrected test that
	failed on Solaris/CDE due to text scrolling.  [Bug 413735]

2001-10-19  Jeff Hobbs  <jeffh@ActiveState.com>

	************************
	****  8.3.4 TAGGED  ****
	************************

	* unix/configure: regend
	* unix/tcl.m4: added -lc to LIBS on AIX and corrected location of
	ldAix.

2001-10-19  Daniel Steffen <das@users.sourceforge.net>

	* generic/tkConsole.c:
	* library/console.tcl:
	* mac/tkMacInit.c:
	* mac/tkMacResource.r: corrected how mac deals with tcl library
	files present both in resources and in $tk_library directory.
	
2001-10-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tk.tcl: added tk::GetSelection from 8.4 for console.

	* library/console.tcl: fixed a few errors where namespace command
	names were used that were not back-ported from 8.4.

2001-10-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure: regend
	* unix/tcl.m4 (SC_ENABLE_GCC): enabled better recognition of gcc.

	* tests/defs.tcl: removed threaded build warning under X.

	* library/console.tcl (tkConsoleOutput): fixed undefined widget
	argument.

2001-10-17 Daniel Steffen <das@users.sourceforge.net>

	* mac/tkMacProjects.sea.hqx: updated projects with new version
	numbers and resource reorganization; included XML versions of
	the projects for CW Pro5 or Pro7 users.
	
2001-10-17 Daniel Steffen <das@users.sourceforge.net>

	Backport of mac specific changes added to 8.4 since 8.3.3:
	
	* generic/tkConsole.c: crashing bug fix when printing to console
	at program exit after the console has already been closed.
	Now setting gStdoutInterp=NULL in ConsoleClose().

	* mac/tkMacInit.c: correct use of Tcl_JoinPath in tk_library
	initialization

	* mac/tkMacMenu.c: special MDEF_PROC_OFFSET only needed for
	exactly one specific version of the MWERKS 68k compiler .

	* mac/tkMacApplication.r:
	* mac/tkMacLibrary.r: